--- a/css/style.css
+++ b/css/style.css
@@ -192,23 +192,7 @@ body {
   background-position: center;
   background-size: cover;
 }
-/* .section-hero {
-  max-width: 1600px;
-  margin-top: 0;
-  margin-bottom: 0;
-  margin-left: auto;
-  margin-right: auto;
-  background-color: var(--background-hero-footer);
-  background-image: linear-gradient(
-      to right,
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
-    url("../imeges/back.jpg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-} */
+
 .hero-title {
   margin-top: 0;
   margin-bottom: 0;
@@ -252,6 +236,9 @@ body {
   text-align: start;
 }
 .specification {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 120px;
   border-radius: 4px;
   background-color: var(--section-cards);
@@ -260,7 +247,6 @@ body {
 .specification > svg {
   width: 70px;
   height: 70px;
-  margin: 25px 100px;
 }
 
 .main-content {
@@ -278,8 +264,7 @@ body {
   font-size: 0px;
 }
 .title {
-  padding-bottom: 10px;
-  margin: 0;
+  margin: 0 0 10px 0;
   color: var(--secondary-text-color);
   font-weight: 700;
   font-size: 14px;
@@ -298,7 +283,6 @@ body {
   text-align: center;
 }
 .card-img .text-item {
-  padding-bottom: 16px;
   margin: 0;
   line-height: 1.71;
 }
@@ -340,9 +324,7 @@ img {
   justify-content: space-between;
   text-align: start;
 }
-.card-img img {
-  padding-bottom: 30px;
-}
+
 .card-img {
   position: relative;
 }
@@ -351,7 +333,7 @@ img {
   pointer-events: none;
   display: flex;
   left: 0;
-  bottom: 30px;
+  bottom: 0px;
   margin: 0;
   padding: 0;
   font-weight: 700;
@@ -369,6 +351,10 @@ img {
 .cards-worker .card-img:not(:last-child) {
   margin-right: 30px;
 }
+.position-text {
+  padding-top: 30px;
+  padding-bottom: 16px;
+}
 .cards-list {
   background-color: var(--section-cards);
 }
@@ -377,6 +363,7 @@ img {
   display: flex;
   align-items: flex-start;
   justify-content: flex-start;
+  align-items: baseline;
 }
 .logo-ft .logo {
   margin-bottom: 20px;
@@ -460,7 +447,6 @@ img {
   flex-direction: column;
   justify-items: flex-start;
   margin-left: 70px;
-  margin-top: 12px;
 }
 /* скрытый заголовок в portfolio */
 
@@ -475,8 +461,8 @@ img {
 .button-list {
   display: flex;
   justify-content: center;
-  margin: 0;
-  padding-bottom: 50px;
+  padding: 0;
+  margin-bottom: 50px;
 }
 .button-list .btn-list:not(:last-child) {
   margin-right: 8px;
@@ -511,20 +497,21 @@ img {
 }
 
 .decore-card .decore-text {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  transform: translatey(101%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
   font-weight: 400;
   font-size: 18px;
   line-height: 1.55;
   letter-spacing: 0.03em;
   margin: 0;
   padding: 64px 24px;
-  position: absolute;
-  left: 0;
-  bottom: 0;
 
   background-color: rgba(33, 150, 243, 0.9);
   color: var(--primery-background);
-  transform: translatey(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .cards-item {
   flex-wrap: wrap;
@@ -560,6 +547,7 @@ img {
 .depiction > p {
   font-size: 16px;
   line-height: 1.87;
+  font-weight: 400;
   margin-top: 0;
   margin-bottom: 0;
 }
