--- a/css/style.css
+++ b/css/style.css
@@ -314,7 +314,7 @@ img {
 }
 .headline-title {
   margin: 0;
-  padding-bottom: 50px;
+  margin-bottom: 50px;
   color: var(--secondary-text-color);
   font-weight: 700;
   font-size: 36px;
